# generation

./: WavCheck.m  ex 2.txt  ex 3.txt  melody.m  mixed_signal.m
melody/: CMakeLists.txt  InputPar.ini  main.cpp
melody/TestTask/libs/generator/: CMakeLists.txt
melody/TestTask/libs/generator/include/generator/: generator.h
melody/TestTask/libs/generator/source/: generator.cpp
melody/TestTask/libs/generator/test/: printer_test.cpp
melody/TestTask/libs/iniReader/: CMakeLists.txt
melody/TestTask/libs/iniReader/include/iniReader/: iniReader.h
melody/TestTask/libs/iniReader/source/: iniReader.cpp
melody/TestTask/libs/noiseAdder/: CMakeLists.txt
melody/TestTask/libs/noiseAdder/include/noiseAdder/: noiseAdder.h
melody/TestTask/libs/noiseAdder/source/: noiseAdder.cpp
melody/TestTask/libs/wavplay/: CMakeLists.txt
melody/TestTask/libs/wavplay/include/wavplay/: wavplay.h
melody/TestTask/libs/wavplay/source/: wavplay.cpp
melody/TestTask/libs/wavplay/test/: wavplay_test.cpp
melody/TestTask/libs/wavwritter/: CMakeLists.txt
melody/TestTask/libs/wavwritter/include/wavwritter/: wavwritter.h
melody/TestTask/libs/wavwritter/source/: wavwritter.cpp
melody/TestTask/libs/wavwritter/test/: printer_test.cpp
